--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.4.8",
     "vuetify": "^2.3.16",
     "vuex": "^3.5.1"
@@ -27,7 +28,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.28.0",
     "sass-loader": "^10.0.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
