--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-country-flag": "^2.0.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.8",
     "vuetify": "^2.3.16",
