--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+  {
   "name": "parcel2",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "v-calendar": "^2.1.6",
     "vue": "^2.6.11",
     "vue-country-flag": "^2.0.2",
     "vue-router": "^3.4.8",
