--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "dev": "npm run serve"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "v-calendar": "^2.1.6",
     "vue": "^2.6.11",
     "vue-country-flag": "^2.0.2",
     "vue-router": "^3.4.8",
     "vuetify": "^2.3.16",
+    "vuetify-mask": "^1.0.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
